--- a/web/src/main/AndroidManifest.xml
+++ b/web/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <application>
         <activity
             android:name=".WebActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="false" />
 
         <service
