--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,6 @@ include ':app'
 //include ':nativelib'
 include ':web'
 include ':hive-hybrid'
+
+//setBinding(new Binding([gradle: this]))
+//evaluate(new File(rootProject.projectDir,'flutterlib/.android/include_flutter.groovy'))
