--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'io.github.zauther.test.android'
 }
 
 
@@ -41,7 +42,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android:+'
 
     implementation 'com.blankj:utilcodex:1.31.0'
     implementation project(':web')
+//    implementation(':flutter')
 }
