--- a/hive-hybrid/build.gradle
+++ b/hive-hybrid/build.gradle
@@ -23,6 +23,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'io.github.zauther.hive.hybrid'
 }
 
 dependencies {
@@ -32,4 +33,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    api 'com.tencent.tbs:tbssdk:44181'
+    implementation 'com.alibaba:fastjson:1.1.72.android'
+
 }
