--- a/web/build.gradle
+++ b/web/build.gradle
@@ -34,6 +34,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'io.github.zauther.test.web'
 }
 
 dependencies {
