--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':hive-hybrid'
 
 //setBinding(new Binding([gradle: this]))
 //evaluate(new File(rootProject.projectDir,'flutterlib/.android/include_flutter.groovy'))
+include ':hive-api'
