--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation project(path: ':hive-api')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     api 'com.tencent.mm.opensdk:wechat-sdk-android:+'
-
+    implementation 'com.alibaba:fastjson:1.1.72.android'
     implementation 'com.blankj:utilcodex:1.31.0'
     implementation project(':web')
 //    implementation(':flutter')
