--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk{
+            abiFilters 'arm64-v8a'
+//            'armeabi-v7a',,'x86','x86_64'
+        }
     }
 
     buildTypes {
@@ -47,5 +52,7 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.1.72.android'
     implementation 'com.blankj:utilcodex:1.31.0'
     implementation project(':web')
+    implementation project(':hive-qjs')
+//    implementation project(':nativelib')
 //    implementation(':flutter')
 }
