--- a/hive-qjs/build.gradle
+++ b/hive-qjs/build.gradle
@@ -3,17 +3,21 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk 31
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        ndk{
+            abiFilters 'arm64-v8a'
+//            'armeabi-v7a',,'x86','x86_64'
+        }
         externalNativeBuild {
             cmake {
-                cppFlags "-std=c++17"
+                cppFlags "-std=c++17 -DANDROID_STL=c++_shared"
             }
         }
     }
