--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "TestAndroid"
 include ':app'
-//include ':nativelib'
+include ':nativelib'
 include ':web'
 include ':hive-hybrid'
 
