--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 //    implementation project(':nativelib')
 //    implementation(':flutter')
 //    implementation "com.google.android.gms:play-services-module.cronet_module.cronet:17.0.1"
-    implementation 'org.microg:module.cronet_module.cronet-api:92.0.4509.1'
-    implementation 'org.microg:module.cronet_module.cronet-common:92.0.4509.1'
-    implementation 'org.microg:module.cronet_module.cronet-native:92.0.4509.1'
+    implementation 'org.microg:cronet-api:92.0.4509.1'
+    implementation 'org.microg:cronet-common:92.0.4509.1'
+    implementation 'org.microg:cronet-native:92.0.4509.1'
 }
