--- a/hive-qjs/build.gradle
+++ b/hive-qjs/build.gradle
@@ -48,7 +48,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'org.microg:module.cronet_module.cronet-api:92.0.4509.1'
-    implementation 'org.microg:module.cronet_module.cronet-common:92.0.4509.1'
-    implementation 'org.microg:module.cronet_module.cronet-native:92.0.4509.1'
+//    implementation 'org.microg:module.cronet_module.cronet-api:92.0.4509.1'
+//    implementation 'org.microg:module.cronet_module.cronet-common:92.0.4509.1'
+//    implementation 'org.microg:module.cronet_module.cronet-native:92.0.4509.1'
+    implementation 'org.microg:cronet-api:92.0.4509.1'
+    implementation 'org.microg:cronet-common:92.0.4509.1'
+    implementation 'org.microg:cronet-native:92.0.4509.1'
 }
