--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,10 @@ pluginManagement {
         maven {
             url 'https://maven.aliyun.com/repository/central'
         }
+        maven {
+            url 'https://maven.aliyun.com/repository/public'
+        }
+
     }
 
 }
@@ -18,6 +22,9 @@ dependencyResolutionManagement {
         }
         maven {
             url 'https://maven.aliyun.com/repository/central'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/public'
         }
     }
 }
